genson-cli/tests/snapshots/map_max_required_keys_snapshots__avro_schema_max_rk_boundary.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - at_map_threshold:
        key1: val1
        key2: val2
    - at_map_threshold:
        key1: val3
        key2: val4
    - at_rk_limit:
        required: always
        optional: sometimes
    - at_rk_limit:
        required: always
    - over_rk_limit:
        req1: always
        req2: present
        optional: sometimes
    - over_rk_limit:
        req1: always
        req2: present
---
{
  "type": "record",
  "name": "document",
  "namespace": "genson",
  "fields": [
    {
      "name": "at_map_threshold",
      "type": [
        "null",
        {
          "type": "record",
          "name": "at_map_threshold",
          "namespace": "genson.document_types",
          "fields": [
            {
              "name": "key1",
              "type": "string"
            },
            {
              "name": "key2",
              "type": "string"
            }
          ]
        }
      ]
    },
    {
      "name": "at_rk_limit",
      "type": [
        "null",
        {
          "name": "at_rk_limit",
          "type": "map",
          "values": "string"
        }
      ]
    },
    {
      "name": "over_rk_limit",
      "type": [
        "null",
        {
          "type": "record",
          "name": "over_rk_limit",
          "namespace": "genson.document_types",
          "fields": [
            {
              "name": "req1",
              "type": "string"
            },
            {
              "name": "req2",
              "type": "string"
            },
            {
              "name": "optional",
              "type": [
                "null",
                "string"
              ]
            }
          ]
        }
      ]
    }
  ]
}
