genson-cli/tests/snapshots/map_max_required_keys_snapshots__avro_schema_max_rk_none.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - structured:
        req1: val1
        req2: val2
        req3: val3
    - structured:
        req1: val4
        req2: val5
        req3: val6
    - below_threshold:
        only: one
    - below_threshold:
        only: two
---
{
  "type": "record",
  "name": "document",
  "namespace": "genson",
  "fields": [
    {
      "name": "structured",
      "type": [
        "null",
        {
          "name": "structured",
          "type": "map",
          "values": "string"
        }
      ]
    },
    {
      "name": "below_threshold",
      "type": [
        "null",
        {
          "type": "record",
          "name": "below_threshold",
          "namespace": "genson.document_types",
          "fields": [
            {
              "name": "only",
              "type": "string"
            }
          ]
        }
      ]
    }
  ]
}
