genson-cli/tests/snapshots/map_max_required_keys_snapshots__avro_schema_max_rk_two.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - two_required:
        common1: always
        common2: present
        varies: sometimes
    - two_required:
        common1: always
        common2: present
        other: value
    - three_required:
        stable1: always
        stable2: present
        stable3: here
        varies: sometimes
    - three_required:
        stable1: always
        stable2: present
        stable3: here
        other: value
---
{
  "type": "record",
  "name": "document",
  "namespace": "genson",
  "fields": [
    {
      "name": "two_required",
      "type": [
        "null",
        {
          "name": "two_required",
          "type": "map",
          "values": "string"
        }
      ]
    },
    {
      "name": "three_required",
      "type": [
        "null",
        {
          "type": "record",
          "name": "three_required",
          "namespace": "genson.document_types",
          "fields": [
            {
              "name": "stable1",
              "type": "string"
            },
            {
              "name": "stable2",
              "type": "string"
            },
            {
              "name": "stable3",
              "type": "string"
            },
            {
              "name": "varies",
              "type": [
                "null",
                "string"
              ]
            },
            {
              "name": "other",
              "type": [
                "null",
                "string"
              ]
            }
          ]
        }
      ]
    }
  ]
}
