genson-cli/tests/snapshots/map_max_required_keys_snapshots__normalized_max_rk_none.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - structured:
        req1: val1
        req2: val2
        req3: val3
    - structured:
        req1: val4
        req2: val5
        req3: val6
    - below_threshold:
        only: one
    - below_threshold:
        only: two
---
[
  {
    "structured": {
      "req1": "val1",
      "req2": "val2",
      "req3": "val3"
    },
    "below_threshold": null
  },
  {
    "structured": {
      "req1": "val4",
      "req2": "val5",
      "req3": "val6"
    },
    "below_threshold": null
  },
  {
    "structured": null,
    "below_threshold": {
      "only": "one"
    }
  },
  {
    "structured": null,
    "below_threshold": {
      "only": "two"
    }
  }
]
