genson-cli/tests/snapshots/map_max_required_keys_snapshots__normalized_max_rk_one.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - one_required:
        common: always
        varies: sometimes
    - one_required:
        common: always
        other: different
    - two_required:
        stable1: always
        stable2: present
        varies: sometimes
    - two_required:
        stable1: always
        stable2: present
        other: value
---
[
  {
    "one_required": {
      "common": "always",
      "varies": "sometimes"
    },
    "two_required": null
  },
  {
    "one_required": {
      "common": "always",
      "other": "different"
    },
    "two_required": null
  },
  {
    "one_required": null,
    "two_required": {
      "stable1": "always",
      "stable2": "present",
      "varies": "sometimes",
      "other": null
    }
  },
  {
    "one_required": null,
    "two_required": {
      "stable1": "always",
      "stable2": "present",
      "varies": null,
      "other": "value"
    }
  }
]
